--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -252,7 +252,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>May 2, 2022</p>
+                            <p>May 9, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -296,18 +296,18 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年4月25日~5月1日一周疫情简报：
+                                <p>2022年5月2日~5月8日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所升高（上升22%），病例总数超过141万例，平均每日增长例1267（上周为1037例）；累计死亡12884人，最近一周新增死亡10人（上周为12人）。一周新增病例数目最多的地区包括戴恩郡Madison（+1848）、密尔沃基郡Milwaukee（+1767）、Waukesha郡（+616）、Winnebago郡（+305）、布朗郡Green Bay（+270）、La Crosse郡（+246）、Washington郡（+242）、Eau Claire郡（+239）、Rock郡（+234）、Marathon郡（+232）、Racine郡（+202）、Ozaukee郡（+187）、基诺沙郡Kenosha（+165）、Outagamie郡（+157）、Fond du Lac郡（+156）、Sheboygan郡（+150）、Columbia郡（+127）、St. Croix郡（+116）、Sauk郡（+112）、Wood郡（+107）、Jefferson郡（+104），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周继续升高（上升37%），病例总数超过143万例，平均每日增长1741例（上周为1267例）；累计死亡12929人，最近一周新增死亡45人（上周为10人）。一周新增病例数目最多的地区包括戴恩郡Madison（+2554）、密尔沃基郡Milwaukee（+2160）、Waukesha郡（+801）、布朗郡Green Bay（+379）、Rock郡（+353）、Winnebago郡（+342）、Marathon郡（+327）、基诺沙郡Kenosha（+315）、Racine郡（+305）、Eau Claire郡（+303）、La Crosse郡（+248）、Washington郡（+241）、Ozaukee郡（+241）、St. Croix郡（+229）、Fond du Lac郡（+209），其他郡一周新增人数在200人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有升高（上升4%），目前病例总数为123851例，周内新增1747例，平均每日增长250例（上周为241例），一周平均检测阳性率为10.8%（高于上周的8.7%）。戴恩郡新冠住院病人数目由28人降至22人；重症病房新冠病人数目由4人升至6人；累计死亡475例，新增0例（上周为0例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周继续升高（上升44%），目前病例总数为126359例，周内新增2508例，平均每日增长358例（上周为250例），一周平均检测阳性率为12.3%（高于上周的10.8%）。戴恩郡新冠住院病人数目由22人升至36人；重症病房新冠病人数目在6人左右波动；累计死亡478例，新增3例（上周为0例）。
 
-                                    <br><br>—  截止到5月1日，戴恩郡接种至少一剂疫苗者超过45.9万人，占总人口83.1%；完成接种疫苗者超过43.5万人，占总人口的78.8%；完成接种加强针者占63.5%。
+                                    <br><br>—  截止到5月1日，戴恩郡接种至少一剂疫苗者超过45.9万人，占总人口83.2%；完成接种疫苗者超过43.5万人，占总人口的78.9%；完成接种加强针者占63.6%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Monona东岸（Monona市）、Sun Prairie市西侧、S Midvale Blvd与Tokay Blvd路口附近区域、戴恩郡北部的Waunakee南侧区域、I-39高速沿线部分区域及其东侧的Vilas、戴恩郡东南部的Stoughton等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Verona市南部、Middleton市东南部、Lake Monona东北岸及靠近Stoughton Rd的区域、Camp Randall橄榄球场西南侧、Verona市北部至向北Midtown Rd附近、Lake Waubesa东部的McFarland等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性96例（上周为91例，上升5%），包括学生79例（上周为70例，上升13%）、职工17例（上周为21例，下降19%）。一周检测阳性率为学生9.9%（上周为8.8%），职工5.7%（上周为7.3%）。截至目前，学生疫苗接种率为95.8%，职工疫苗接种率为96.2%。
-                                                                        
+                                    <br><br>—  威斯康星大学麦迪逊分校疫情增长速度较上周大幅升高，最近一周内共新增阳性168例（上周为96例，上升75%），包括学生130例（上周为79例，上升65%）、职工38例（上周为17例，上升124%）。一周检测阳性率为学生12.5%（上周为9.9%），职工9.3%（上周为5.7%）。截至目前，学生疫苗接种率为95.8%，职工疫苗接种率为96.2%。
+
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
                                 <br><br><br><br>
