--- a/commentary/category.html
+++ b/commentary/category.html
@@ -266,6 +266,62 @@
                     <div class="row justify-content-center section_padding_100 ">
 
 
+                        
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Commentary</a>
+                                </div>
+                                <h4 class="font-pt">困难时期的“歌舞升平”大可不必</h4>
+                                <p class="gazette-post-date">2022年4月12日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/weibo.png" style="max-height: 250px; width: auto;"
+                                        alt="困难时期的“歌舞升平”大可不必">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>今天，有一条令人啼笑皆非的新闻在网上传开了：上海东方卫视即将于四月十三号晚八点半举行《众志成城，同心守“沪”抗疫特别节目》。曝光出来的节目表有那英、靳东，胡歌、白百何等人的歌咏表演、情景剧、以及著名魔术师傅琰东的魔术表演。这些节目无不以正能量的辞藻冠名，诸如《春暖花开》、《最美风景线》等。</p>
+                                    <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="difficult-time.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读
+                                            <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Commentary</a>
+                                </div>
+                                <h4 class="font-pt">​困难时期属于普通人的“上海之春”</h4>
+                                <p class="gazette-post-date">2022年4月11日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/volunteer.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="困难时期的“歌舞升平”大可不必">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>过去两周，麦迪讯通过列举上海疫情期间发生的种种事例，从宏观的角度分析了上海此次出现的管理症结以及“清零还是共存”的矛盾。正如上篇社论的结尾所写：既然我们没有足够的影响力，那么目前就不宜拘泥于大政方针的站队问题，而是着眼于在具体的问题深入交换立场，谋求最起码的共识，确定彼此都不能逾越的底线。今天，我们想从几个事例入手，来谈谈我们普通的升斗小民（无论是否身处上海）还能为上海走出困境做点什么？</p>
+                                    <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="ordinary-people.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读
+                                            <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                            
+
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
                             <div class="gazette-welcome-post">
