--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -252,7 +252,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>May 9, 2022</p>
+                            <p>May 16, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -296,17 +296,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年5月2日~5月8日一周疫情简报：
+                                <p>2022年5月9日~15日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周继续升高（上升37%），病例总数超过143万例，平均每日增长1741例（上周为1267例）；累计死亡12929人，最近一周新增死亡45人（上周为10人）。一周新增病例数目最多的地区包括戴恩郡Madison（+2554）、密尔沃基郡Milwaukee（+2160）、Waukesha郡（+801）、布朗郡Green Bay（+379）、Rock郡（+353）、Winnebago郡（+342）、Marathon郡（+327）、基诺沙郡Kenosha（+315）、Racine郡（+305）、Eau Claire郡（+303）、La Crosse郡（+248）、Washington郡（+241）、Ozaukee郡（+241）、St. Croix郡（+229）、Fond du Lac郡（+209），其他郡一周新增人数在200人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周继续升高（上升24%），病例总数超过144万例，平均每日增长2162例（上周为1741例）；累计死亡12957人，最近一周新增死亡28人（上周为45人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2764）、戴恩郡Madison（+2688）、沃基肖郡Waukesha（+1078）、布朗郡Green Bay（+548）、拉辛郡Racine（+506）、Winnebago郡（+448）、Rock郡（+441）、La Crosse郡（+428）、Marathon郡（+415）、基诺沙郡Kenosha（+386）、St. Croix郡（+336）、Washington郡（+327）、Ozaukee郡（+300）、Outagamie郡（+297）、Eau Claire郡（+263）、Fond du Lac郡（+263）、Sheboygan郡（+218）、Wood郡（+200），其他郡一周新增人数在200人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周继续升高（上升44%），目前病例总数为126359例，周内新增2508例，平均每日增长358例（上周为250例），一周平均检测阳性率为12.3%（高于上周的10.8%）。戴恩郡新冠住院病人数目由22人升至36人；重症病房新冠病人数目在6人左右波动；累计死亡478例，新增3例（上周为0例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有升高（上升7%），目前病例总数为129043例，周内新增2684例，平均每日增长383例（上周为358例），一周平均检测阳性率为13.9%（高于上周的12.3%）。戴恩郡新冠住院病人数目由36人升至46人；重症病房新冠病人数目在7人左右波动；累计死亡482例，新增4例（上周为3例）。
 
-                                    <br><br>—  截止到5月1日，戴恩郡接种至少一剂疫苗者超过45.9万人，占总人口83.2%；完成接种疫苗者超过43.5万人，占总人口的78.9%；完成接种加强针者占63.6%。
+                                    <br><br>—  截止到5月15日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.3%；完成接种疫苗者超过43.6万人，占总人口的79.0%；完成接种加强针者占63.7%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Verona市南部、Middleton市东南部、Lake Monona东北岸及靠近Stoughton Rd的区域、Camp Randall橄榄球场西南侧、Verona市北部至向北Midtown Rd附近、Lake Waubesa东部的McFarland等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）、MSN机场附近、Verona市北部（Midtown Rd附近）、Lake Monona东北岸（East Morland公园附近）、戴恩郡北部的Deforest东部、Middleton西南部（Beltline高速以西）等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校疫情增长速度较上周大幅升高，最近一周内共新增阳性168例（上周为96例，上升75%），包括学生130例（上周为79例，上升65%）、职工38例（上周为17例，上升124%）。一周检测阳性率为学生12.5%（上周为9.9%），职工9.3%（上周为5.7%）。截至目前，学生疫苗接种率为95.8%，职工疫苗接种率为96.2%。
+                                    <br><br>—  威斯康星大学麦迪逊分校疫情增长速度较上周有所降低，最近一周内共新增阳性124例（上周为148例，下降26%），包括学生89例（上周为130例，下降32%）、职工35例（上周为38例，下降8%）。一周检测阳性率为学生8.8%（上周为12.5%），职工9.6%（上周为9.3%）。截至目前，学生疫苗接种率为95.7%，职工疫苗接种率为96.2%。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
