--- a/business/category.html
+++ b/business/category.html
@@ -267,6 +267,64 @@
                     <div class="row justify-content-center section_padding_100">
 
 
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Business</a>
+                                </div>
+                                <h4 class="font-pt">美国公布22年来最大加息幅度</h4>
+                                <p class="gazette-post-date">2022年5月4日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/rate.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="rate">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>美国央行宣布了二十多年来最大的一次加息，以加强与快速上涨的物价的斗争。美联储表示，在 3 月份小幅上调之后，将基准利率上调半个百分点，至 0.75% 至 1% 的区间。随着美国通胀处于 40 年来的最高水平，预计还会进一步加息。他们预计这将冷却对商品和服务的需求，有助于缓解价格通胀。
+</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="rate-increase.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Business</a>
+                                </div>
+                                <h4 class="font-pt">特斯拉创始人马斯克收购推特计划</h4>
+                                <p class="gazette-post-date">2022年4月18日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/musk.png" style="max-height: 250px; width: auto;"
+                                        alt="Elon Musk">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>全球首富马斯克（Elon Musk）周四宣布，已向推特（Twitter）发出邀约，以每股54.2美元的价格收购推特全部股份。依照马斯克的出价，推特公司的估值达到430亿美元。
+</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="musk.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
                             <div class="gazette-welcome-post">
