weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -252,7 +252,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>May 16, 2022</p>
+                            <p>May 24, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -296,17 +296,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年5月9日~15日一周疫情简报：
+                                <p>2022年5月16日~23日一周（最近8日）疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周继续升高（上升24%），病例总数超过144万例，平均每日增长2162例（上周为1741例）；累计死亡12957人，最近一周新增死亡28人（上周为45人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2764）、戴恩郡Madison（+2688）、沃基肖郡Waukesha（+1078）、布朗郡Green Bay（+548）、拉辛郡Racine（+506）、Winnebago郡（+448）、Rock郡（+441）、La Crosse郡（+428）、Marathon郡（+415）、基诺沙郡Kenosha（+386）、St. Croix郡（+336）、Washington郡（+327）、Ozaukee郡（+300）、Outagamie郡（+297）、Eau Claire郡（+263）、Fond du Lac郡（+263）、Sheboygan郡（+218）、Wood郡（+200），其他郡一周新增人数在200人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所降低（下降13%），病例总数超过146万例，平均每日增长1876例（上周为2162例）；累计死亡12962人，最近一周新增死亡5人（上周为28人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2522）、戴恩郡Madison（+2439）、沃基肖郡Waukesha（+988）、布朗郡Green Bay（+499）、拉辛郡Racine（+437）、基诺沙郡Kenosha（+385）、Winnebago郡（+369）、Rock郡（+329）、Washington郡（+323）、La Crosse郡（+308）、Marathon郡（+302）、Outagamie郡（+249）、Ozaukee郡（+217），其他郡一周新增人数在200人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有升高（上升7%），目前病例总数为129043例，周内新增2684例，平均每日增长383例（上周为358例），一周平均检测阳性率为13.9%（高于上周的12.3%）。戴恩郡新冠住院病人数目由36人升至46人；重症病房新冠病人数目在7人左右波动；累计死亡482例，新增4例（上周为3例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有降低（下降8%），目前病例总数为131788例，周内新增2475例，平均每日增长354例（上周为383例），一周平均检测阳性率为12.8%（低于上周的13.9%）。戴恩郡新冠住院病人数目在47人左右波动；重症病房新冠病人数目在6人左右波动；累计死亡484例，新增2例（上周为4例）。
 
-                                    <br><br>—  截止到5月15日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.3%；完成接种疫苗者超过43.6万人，占总人口的79.0%；完成接种加强针者占63.7%。
+                                    <br><br>—  截止到5月23日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.3%；完成接种疫苗者超过43.6万人，占总人口的79.0%；完成接种加强针者占63.8%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）、MSN机场附近、Verona市北部（Midtown Rd附近）、Lake Monona东北岸（East Morland公园附近）、戴恩郡北部的Deforest东部、Middleton西南部（Beltline高速以西）等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Eagle Heights与University Houses社区及其西侧的Shorewood Hills、Camp Randall橄榄球场西南侧（Forest Hill墓园以东、Monroe St以北）、戴恩郡北部的Deforest东部、Lake Mendota东北岸（Northport Dr以南）、Lake Monona西南岸至N Wingra Dr、S Midvale Blvd与Tokay Blvd路口附近区域等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校疫情增长速度较上周有所降低，最近一周内共新增阳性124例（上周为148例，下降26%），包括学生89例（上周为130例，下降32%）、职工35例（上周为38例，下降8%）。一周检测阳性率为学生8.8%（上周为12.5%），职工9.6%（上周为9.3%）。截至目前，学生疫苗接种率为95.7%，职工疫苗接种率为96.2%。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周检测数目仅为125人，其中阳性7例（上周为124例），包括学生7例（上周为89例）、职工0例（上周为35例）。一周检测阳性率为学生10.9%（上周为8.8%），职工0.0%（上周为9.6%）。截至目前，学生疫苗接种率为93.7%，职工疫苗接种率为96.2%。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
