update by Wenxi

--- a/recreation/category.html
+++ b/recreation/category.html
@@ -9,7 +9,7 @@
         <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
         <!-- Title  -->
-        <title>麦迪讯 | 文体 Recreation</title>
+        <title>麦迪讯 | 文体 | Recreation</title>
 
         <!-- Favicon  -->
         <link rel="icon" href="../img/core-img/logo.jpg">
@@ -194,9 +194,6 @@
                                                 <a class="nav-link" href="../society/category.html">社会 Society</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../recreation/category.html">文体 Recreation</a>
-                                            </li>
-                                            <li class="nav-item">
                                                 <a class="nav-link" href="../commentary/category.html">新闻评论
                                                     Commentary</a>
                                             </li>
@@ -215,6 +212,7 @@
                                                     <a class="dropdown-item" href="../tech/category.html">科技 | Tech</a>
                                                     <a class="dropdown-item" href="../history/category.html">历史 | History</a>
                                                     <a class="dropdown-item" href="../business/category.html">财经 | Business</a>
+                                                    <a class="dropdown-item" href="../recreation/category.html">文体 | Recreation</a>
                                                 </div>
                                             </li>
                                         </ul>
