--- a/tech/category.html
+++ b/tech/category.html
@@ -194,9 +194,6 @@
                                                 <a class="nav-link" href="../society/category.html">社会 Society</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../recreation/category.html">文体 Recreation</a>
-                                            </li>
-                                            <li class="nav-item">
                                                 <a class="nav-link" href="../commentary/category.html">新闻评论
                                                     Commentary</a>
                                             </li>
@@ -215,6 +212,7 @@
                                                     <a class="dropdown-item" href="../tech/category.html">科技 | Tech</a>
                                                     <a class="dropdown-item" href="../history/category.html">历史 | History</a>
                                                     <a class="dropdown-item" href="../business/category.html">财经 | Business</a>
+                                                    <a class="dropdown-item" href="../recreation/category.html">文体 | Recreation</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -264,6 +262,33 @@
             <div class="catagory-welcome-post-area">
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Tech</a>
+                                </div>
+                                <h4 class="font-pt">抗病毒药物和抗体对COVID-19BA.2 omicron变体病毒有良好的效果</h4>
+                                <p class="gazette-post-date">2022年3月11日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/omicronBA2.png" style="max-height: 250px; width: auto;"
+                                        alt="">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>Kawaoka和他威大学麦迪逊分校和东京国家传染病研究所的合作者在3月9日在《新英格兰医学杂志》上发表了他们的发现。在使用非人灵长类动物细胞的实验室实验中，Kawaoka的团队测试了七种单克隆抗体，三种抗体组合，以及三种针对BA.2变体的抗病毒治疗。大多数临床批准的抗体治疗是多种抗体的组合。静脉注射药物remdesivir和两种抗COVID-19药片的活性成分Paxlovid和Merck公司的molnupiravir对BA.1的效果几乎与它们对SARS-CoV-2原始毒株的效果一样。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="covidBA.2omicron.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
