--- a/category.html
+++ b/category.html
@@ -193,9 +193,6 @@
                                                 <a class="nav-link" href="society/category.html">社会 Society</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="recreation/category.html">文体 Recreation</a>
-                                            </li>
-                                            <li class="nav-item">
                                                 <a class="nav-link" href="commentary/category.html">新闻评论 Commentary</a>
                                             </li>
                                             <li class="nav-item">
@@ -213,6 +210,7 @@
                                                     <a class="dropdown-item" href="tech/category.html">科技 | Tech</a>
                                                     <a class="dropdown-item" href="history/category.html">历史 | History</a>
                                                     <a class="dropdown-item" href="business/category.html">财经 | Business</a>
+                                                    <a class="dropdown-item" href="recreation/category.html">文体 | Recreation</a>
                                                 </div>
                                             </li>
                                         </ul>
