--- a/commentary/category.html
+++ b/commentary/category.html
@@ -194,9 +194,6 @@
                                                 <a class="nav-link" href="../society/category.html">社会 Society</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../recreation/category.html">文体 Recreation</a>
-                                            </li>
-                                            <li class="nav-item">
                                                 <a class="nav-link" href="../commentary/category.html">新闻评论
                                                     Commentary</a>
                                             </li>
@@ -215,6 +212,7 @@
                                                     <a class="dropdown-item" href="../tech/category.html">科技 | Tech</a>
                                                     <a class="dropdown-item" href="../history/category.html">历史 | History</a>
                                                     <a class="dropdown-item" href="../business/category.html">财经 | Business</a>
+                                                    <a class="dropdown-item" href="../recreation/category.html">文体 | Recreation</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -265,7 +263,31 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100 ">
 
-
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Commentary</a>
+                                </div>
+                                <h4 class="font-pt">对上海“封管”一周后的观察与思考</h4>
+                                <p class="gazette-post-date">2022年4月4日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/shanghaiCovid1.png" style="max-height: 250px; width: auto;"
+                                        alt="对上海“封管”一周后的观察与思考">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>封闭式管理在上海已经施行一周有余，根据上海发布的最新数据，从2022年4月4日0—24时，4月4日0—24时上海新增本土确诊268例无症状13086例。4月4日，上海基本完成了一轮全市范围内的核酸采样工作，目前上海正在开展检测、复核、人员转运和相关分析研判工作，在有关工作完成之前，全市将继续实施封控管理，除因病就医等外，严格落实“足不出户”的政策。</p>
+                                    <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="ShanghaiCovidSeize.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读
+                                            <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         
 
                         <div class="col-12 col-md-4">
