--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>May 24, 2022</p>
+                            <p>May 31, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,17 +294,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年5月16日~23日一周（最近8日）疫情简报：
+                                <p>2022年5月24日~30日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所降低（下降13%），病例总数超过146万例，平均每日增长1876例（上周为2162例）；累计死亡12962人，最近一周新增死亡5人（上周为28人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2522）、戴恩郡Madison（+2439）、沃基肖郡Waukesha（+988）、布朗郡Green Bay（+499）、拉辛郡Racine（+437）、基诺沙郡Kenosha（+385）、Winnebago郡（+369）、Rock郡（+329）、Washington郡（+323）、La Crosse郡（+308）、Marathon郡（+302）、Outagamie郡（+249）、Ozaukee郡（+217），其他郡一周新增人数在200人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有降低（下降6%），病例总数超过147万例，平均每日增长1763例（上周为1876例）；累计死亡13001人，最近一周新增死亡39人（上周为5人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2265）、戴恩郡Madison（+2261）、沃基肖郡Waukesha（+900）、拉辛郡Racine（+461）、布朗郡Green Bay（+430）、Washington郡（+345）、Rock郡（+331）、Kenosha郡（+329）、Marathon郡（+312）、La Crosse郡（+275）、Winnebago郡（+253）、Ozaukee郡（+227）、Outagamie郡（+212）、Sheboygan郡（+194）、Wood郡（+188）、St. Croix郡（+167）、Columbia郡（+162）、Fond du Lac郡（+158），其他郡一周新增人数在150人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有降低（下降8%），目前病例总数为131788例，周内新增2475例，平均每日增长354例（上周为383例），一周平均检测阳性率为12.8%（低于上周的13.9%）。戴恩郡新冠住院病人数目在47人左右波动；重症病房新冠病人数目在6人左右波动；累计死亡484例，新增2例（上周为4例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有降低（下降7%），目前病例总数为134100例，周内新增2312例，平均每日增长330例（上周为354例），一周平均检测阳性率为13.2%（高于上周的12.8%）。戴恩郡新冠住院病人数目在48人左右波动；重症病房新冠病人数目由6人降至4人；累计死亡485例，新增1例（上周为2例）。
 
-                                    <br><br>—  截止到5月23日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.3%；完成接种疫苗者超过43.6万人，占总人口的79.0%；完成接种加强针者占63.8%。
+                                    <br><br>—  截止到5月30日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.4%；完成接种疫苗者超过43.6万人，占总人口的79.1%；完成接种加强针者占63.8%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Eagle Heights与University Houses社区及其西侧的Shorewood Hills、Camp Randall橄榄球场西南侧（Forest Hill墓园以东、Monroe St以北）、戴恩郡北部的Deforest东部、Lake Mendota东北岸（Northport Dr以南）、Lake Monona西南岸至N Wingra Dr、S Midvale Blvd与Tokay Blvd路口附近区域等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）、Tenney Park附近、Middleton东南部（University Ave附近）、Verona西部、Lake Monona南侧的Beltline高速以南、Sun Prairie西部等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周检测数目仅为125人，其中阳性7例（上周为124例），包括学生7例（上周为89例）、职工0例（上周为35例）。一周检测阳性率为学生10.9%（上周为8.8%），职工0.0%（上周为9.6%）。截至目前，学生疫苗接种率为93.7%，职工疫苗接种率为96.2%。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性87例（上周为7例），包括学生57例（上周为7例）、职工30例（上周为0例）。一周检测阳性率为学生13.7%（上周为10.9%），职工7.6%（上周为0.0%）。截至目前，学生疫苗接种率为93.5%，职工疫苗接种率为96.2%。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
