weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>May 31, 2022</p>
+                            <p>Jun 6, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,17 +294,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年5月24日~30日一周疫情简报：
+                                <p>2022年5月30日~6月5日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有降低（下降6%），病例总数超过147万例，平均每日增长1763例（上周为1876例）；累计死亡13001人，最近一周新增死亡39人（上周为5人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2265）、戴恩郡Madison（+2261）、沃基肖郡Waukesha（+900）、拉辛郡Racine（+461）、布朗郡Green Bay（+430）、Washington郡（+345）、Rock郡（+331）、Kenosha郡（+329）、Marathon郡（+312）、La Crosse郡（+275）、Winnebago郡（+253）、Ozaukee郡（+227）、Outagamie郡（+212）、Sheboygan郡（+194）、Wood郡（+188）、St. Croix郡（+167）、Columbia郡（+162）、Fond du Lac郡（+158），其他郡一周新增人数在150人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所降低（下降10%），病例总数超过148万例，平均每日增长1585例（上周为1763例）；累计死亡13037人，最近一周新增死亡36人（上周为39人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2247）、戴恩郡Madison（+2194）、沃基肖郡Waukesha（+870）、布朗郡Green Bay（+476）、拉辛郡Racine（+403）、Kenosha郡（+344）、Winnebago郡（+338）、Outagamie郡（+336）、Rock郡（+311）、Marathon郡（+294）、Washington郡（+259）、Sheboygan郡（+238）、La Crosse郡（+236）、Wood郡（+212）、Ozaukee郡（+184）、Fond du Lac郡（+157）、St. Croix郡（+152），其他郡一周新增人数在150人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有降低（下降7%），目前病例总数为134100例，周内新增2312例，平均每日增长330例（上周为354例），一周平均检测阳性率为13.2%（高于上周的12.8%）。戴恩郡新冠住院病人数目在48人左右波动；重症病房新冠病人数目由6人降至4人；累计死亡485例，新增1例（上周为2例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所升高（上升32%），目前病例总数为136148例，周内新增3060例，平均每日增长437例（上周为330例），一周平均检测阳性率为14.9%（高于上周的13.2%）。戴恩郡新冠住院病人数目由48人升至54人；重症病房新冠病人数目由4人升至9人；累计死亡487例，新增2例（上周为1例）。
 
-                                    <br><br>—  截止到5月30日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.4%；完成接种疫苗者超过43.6万人，占总人口的79.1%；完成接种加强针者占63.8%。
+                                    <br><br>—  截止到6月5日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.4%；完成接种疫苗者超过43.6万人，占总人口的79.1%；完成接种加强针者占63.9%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）、Tenney Park附近、Middleton东南部（University Ave附近）、Verona西部、Lake Monona南侧的Beltline高速以南、Sun Prairie西部等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）、Lake Monona南侧的Beltline高速以南、Lake Monona北岸（北至Washington Ave、Commercial Ave）、Lake Monona与Lake Wingra之间区域（St Mary医院与Murphy Creek之间）、威州议会大厦北部与东部区域等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性87例（上周为7例），包括学生57例（上周为7例）、职工30例（上周为0例）。一周检测阳性率为学生13.7%（上周为10.9%），职工7.6%（上周为0.0%）。截至目前，学生疫苗接种率为93.5%，职工疫苗接种率为96.2%。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性87例（上周为93例），包括学生63例（上周为63例）、职工24例（上周为30例）。一周检测阳性率为学生17.5%（上周为13.7%），职工6.6%（上周为7.6%）。学生与职工疫苗接种率数据暂停更新。即日起威大“新冠应对”信息平台疫情数据暂停每日更新，改为每周更新一次。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
