weekly covid update (missing)

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Jun 6, 2022</p>
+                            <p>Jun 13, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,17 +294,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年5月30日~6月5日一周疫情简报：
+                                <p>2022年6月6日~12日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所降低（下降10%），病例总数超过148万例，平均每日增长1585例（上周为1763例）；累计死亡13037人，最近一周新增死亡36人（上周为39人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2247）、戴恩郡Madison（+2194）、沃基肖郡Waukesha（+870）、布朗郡Green Bay（+476）、拉辛郡Racine（+403）、Kenosha郡（+344）、Winnebago郡（+338）、Outagamie郡（+336）、Rock郡（+311）、Marathon郡（+294）、Washington郡（+259）、Sheboygan郡（+238）、La Crosse郡（+236）、Wood郡（+212）、Ozaukee郡（+184）、Fond du Lac郡（+157）、St. Croix郡（+152），其他郡一周新增人数在150人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所降低（下降5%），病例总数超过149万例，平均每日增长1504例（上周为1585例）；累计死亡13061人，最近一周新增死亡24人（上周为36人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1976）、戴恩郡Madison（+1878）、沃基肖郡Waukesha（+661）、布朗郡Green Bay（+404）、拉辛郡Racine（+363）、Outagamie郡（+291）、Rock郡（+278）、Winnebago郡（+272）、Wood郡（+266）、Kenosha郡（+258）、Marathon郡（+254）、La Crosse郡（+243）、Sheboygan郡（+197）、Washington郡（+194）、Fond du Lac郡（+159）、St. Croix郡（+158），其他郡一周新增人数在150人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所升高（上升32%），目前病例总数为136148例，周内新增3060例，平均每日增长437例（上周为330例），一周平均检测阳性率为14.9%（高于上周的13.2%）。戴恩郡新冠住院病人数目由48人升至54人；重症病房新冠病人数目由4人升至9人；累计死亡487例，新增2例（上周为1例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周明显降低（下降38%），目前病例总数为138032例，周内新增1884例，平均每日增长269例（上周为437例），一周平均检测阳性率为13.0%（低于上周的14.9%）。戴恩郡新冠住院病人数目由54人升至57人；重症病房新冠病人数目由9人升至11人；累计死亡488例，新增1例（上周为2例）。
 
-                                    <br><br>—  截止到6月5日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.4%；完成接种疫苗者超过43.6万人，占总人口的79.1%；完成接种加强针者占63.9%。
+                                    <br><br>—  截止到6月12日，戴恩郡接种至少一剂疫苗者超过46.0万人，占总人口83.4%；完成接种疫苗者超过43.7万人，占总人口的79.2%；完成接种加强针者占63.9%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）、Lake Monona南侧的Beltline高速以南、Lake Monona北岸（北至Washington Ave、Commercial Ave）、Lake Monona与Lake Wingra之间区域（St Mary医院与Murphy Creek之间）、威州议会大厦北部与东部区域等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸的Maple Bluff、Lake Monona东岸的Buckeye Rd附近、MSN机场西侧（Northport Dr东北）、Lake Monona南侧的Beltline高速以南、Lake Monona东北岸（WI-30高速以南、US-51高速以西）等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性87例（上周为93例），包括学生63例（上周为63例）、职工24例（上周为30例）。一周检测阳性率为学生17.5%（上周为13.7%），职工6.6%（上周为7.6%）。学生与职工疫苗接种率数据暂停更新。即日起威大“新冠应对”信息平台疫情数据暂停每日更新，改为每周更新一次。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性56例（上周为87例），包括学生56例（上周为63例）、职工0例（上周为24例）。一周检测阳性率为学生16.0%（上周为17.5%），职工0.0%（上周为6.6%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
