weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Jun 21, 2022</p>
+                            <p>Jun 27, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,17 +294,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年6月13日~20日一周（八日）疫情简报：
+                                <p>2022年6月21日~26日一周（六日）疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所降低（下降8%），病例总数超过150万例，平均每日增长1387例（上周为1504例）；累计死亡13100人，最近一周新增死亡39人（上周为24人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1656）、戴恩郡Madison（+1627）、沃基肖郡Waukesha（+663）、布朗郡Green Bay（+372）、拉辛郡Racine（+331）、Rock郡（+298）、Marathon郡（+296）、Winnebago郡（+266）、Kenosha郡（+263）、Washington郡（+249）、Outagamie郡（+237）、Wood郡（+194）、Sheboygan郡（+191）、La Crosse郡（+170），其他郡一周新增人数在150人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高1%），病例总数超过151万例，平均每日增长1405例（上周为1387例）；累计死亡13117人，最近一周新增死亡17人（上周为39人）。一周新增病例数目最多的地区包括戴恩郡Madison（+1712）、密尔沃基郡Milwaukee（+1707）、沃基肖郡Waukesha（+664）、布朗郡Green Bay（+387）、Marathon郡（+320）、拉辛郡Racine（+293）、Kenosha郡（+277）、Rock郡（+243）、Winnebago郡（+240）、Washington郡（+232）、Outagamie郡（+227）、Fond du Lac郡（+189）、La Crosse郡（+180）、Sheboygan郡（+173）、Wood郡（+159），其他郡一周新增人数在150人以下。
                                     
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所降低（下降14%），目前病例总数为139834例，周内新增1622例，平均每日增长232例（上周为269例），一周平均检测阳性率为13.6%（高于上周的13.0%）。戴恩郡新冠住院病人数目由57人升至60人；重症病房新冠病人数目由11人降至9人；累计死亡490例，新增2例（上周为1例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所升高（上升23%），目前病例总数为141325例，周内（六日）新增1491例，平均每日增长249例（上周为203例），一周平均检测阳性率为14.0%（高于上周的13.6%）。戴恩郡新冠住院病人数目由60人降至54人；重症病房新冠病人数目由9人升至10人；累计死亡490例，无新增（上周为2例）。
 
-                                    <br><br>—  截止到6月16日（近日未更新），戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.5%；完成接种疫苗者超过43.7万人，占总人口的79.2%；完成接种加强针者占64.0%。
+                                    <br><br>—  截止到6月24日（近日未更新），戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.5%；完成接种疫苗者超过43.7万人，占总人口的79.2%；完成接种加强针者占64.0%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）、Lake Monona东岸（Nichols Rd以北、Schofield St以西）、Lake Mendota西岸（Middleton东北部）、MSN机场附近、Lake Monona东北岸至Starkweather Park，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）、Whitney Way西侧部分地区（Garner Park及Glen Oak Hills Park附近）、Eagle Heights与University Houses社区、Beltline高速西段以西至Pioneer Park以东的大片地区、Beltline高速东南段（265号出口与I-39高速附近）部分沿线地区（北至Monona Park）等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性88例（上周为56例），一周检测阳性率为14.7%（上周为7.9%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性77例（低于上周的88例），一周检测阳性率为13.7%（低于上周的14.7%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
