--- a/commentary/category.html
+++ b/commentary/category.html
@@ -262,6 +262,35 @@
             <div class="catagory-welcome-post-area">
                 <div class="container">
                     <div class="row justify-content-center section_padding_100 ">
+                        
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Commentary</a>
+                                </div>
+                                <h4 class="font-pt">藏在香蕉背后的种族主义不应被轻易放过</h4>
+                                <p class="gazette-post-date">2022年6月20日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/614_10.png"
+                                        style="max-height: 250px; width: auto;" alt="藏在香蕉背后的种族主义不应被轻易放过">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>
+                                  在6.14袭击事件嫌疑人未到案并未接受正式询问之前，警方就武断地发表声明，否认了此次袭击背后有种族主义动因，并在通报受害者的身份（是否是学生）以及受伤情况时语焉不详。在此期间，校方也并没有代表学生的利益向麦迪逊政府和执法机关提出交涉。公权力和官僚系统在处理此事上的消极态度可见一斑。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="614_incident.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                        
 
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
