--- a/recreation/category.html
+++ b/recreation/category.html
@@ -262,6 +262,35 @@
             <div class="single-post-contents">
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
+                        
+                      <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Recreation</a>
+                              </div>
+                              <h4 class="font-pt">约翰尼·德普在与梅柏·希尔德的诽谤案中胜诉</h4>
+                              <p class="gazette-post-date">2022年6月9日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/DvH_03.jpg" style="max-height: 250px; width: auto;"
+                                      alt="约翰尼·德普在与梅柏·希尔德的诽谤案中胜诉">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>
+                                约翰尼·德普 (Johnny Depp) 在梅柏·希尔德 (Amber Heard) 的诽谤案中胜诉
+                              </p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="DvH.html" class="font-pt" target="_blank"
+                                          title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                              aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
 
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
