--- a/politics/category.html
+++ b/politics/category.html
@@ -262,6 +262,33 @@
             <div class="catagory-welcome-post-area">
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
+                        
+                        <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Politics</a>
+                              </div>
+                              <h2 class="font-pt">美国国会骚乱听证，特朗普被指“未遂政变”</h2>
+                              <p class="gazette-post-date">2022年6月13日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/1_6_USC/1_6_USC_img_1.png" style="max-height: 250px; width: auto;" alt="">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>历经11个月，在发出近100份传票和1000多次问讯后，对2021年1月6日美国国会大厦骚乱袭击事件的委员会终于结束闭门工作，开始举行公开听证会，介绍调查结果。
+                              </p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="1_6_USC.html" class="font-pt"
+                                          target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                              aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
 
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
